--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -196,9 +196,8 @@ header .menu-list  a:hover {
 .welcomeSection {
     min-width: 100svw;
     max-width: 100svw;
-    /* min-height: 100svh; */
-    /* max-height: 100dvh; */
-    height: 100vh;
+    min-height: 100dvh;
+    max-height: 100dvh;
     display: grid;
     align-items: center;
     justify-content: center;
