--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -94,13 +94,14 @@ header {
 }
 
 .article-number {
-    border-radius: 30%;
+    border-radius: 50%;
     background-color: var(--orange);
     color: var(--white);
     padding: 0.2rem;
     position: absolute;
     top: 0.7rem;
     left: 0.7rem;
+    font-weight: bold;
 }
 /* =========================================== */
 .menu-list {
