--- a/stylesheet/carrinho.css
+++ b/stylesheet/carrinho.css
@@ -1,12 +1,11 @@
-.shopping-cart img {
+.cartList img {
     max-width: 15dvh;
     object-fit: cover;
     border-radius: 1rem 0;
 }
 
 
-.shopping-cart {
-
+.cartList {
     /* position: absolute; */
     /* left: 0; */
     /* top: 0; */
@@ -106,13 +105,13 @@ input[type=number] {
 
 /* ================================================== */
 
-.boxItem {
+/* .boxItem {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 0.5rem;
     align-items: center;
-    /* justify-content: center; */
-    /* max-height: 30vh; */
+    justify-content: center; */
+    /* max-height: 30vh;
     max-height: max-content;
     gap: 0.5rem;
     font-size: 1rem;
@@ -123,7 +122,7 @@ input[type=number] {
 }
 
 .boxItem h3 {
-    /* border: solid red 2px; */
+    border: solid red 2px;
     margin: 0 auto;
     text-transform: uppercase;
     background-color: var(--yellow);
@@ -135,7 +134,7 @@ input[type=number] {
     font-weight: bold;
     letter-spacing: 0.1rem;
     min-height: 2.6rem;
-    /* min-width: 0%; */
+    min-width: 0%;
     max-width: 90%;
     display: flex;
     justify-content: center;
@@ -147,12 +146,13 @@ input[type=number] {
     grid-column: span 2;
     object-fit: contain;
     max-width: 100%;
-    /* max-height: 50%; */
+    border:solid red 2px;
+    max-height: 50%;
     margin: 0 auto;
     border-radius: 0.5rem;
-    /* opacity: 0.6; */
-    /* transition: 1s; */
-    /* box-shadow: 0 0.3rem 0.7rem 0; */
+    opacity: 0.6;
+    transition: 1s;
+    box-shadow: 0 0.3rem 0.7rem 0;
 }
 
 .boxItem select {
@@ -180,4 +180,5 @@ input[type=number] {
     letter-spacing: 0.1rem;
     outline: none;
     max-width: 100%;
-}
+} 
+*/
