--- a/stylesheet/cabaz.css
+++ b/stylesheet/cabaz.css
@@ -35,6 +35,18 @@
 
 }
 
+.cabazPrice {
+    text-align: center;
+    background-color: var(--black);
+    width: fit-content;
+    color: var(--orange);
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    margin: 1rem auto;
+}
+
 .cabaz-list {
     display: grid;
     justify-content: center;
