--- a/stylesheet/styleAboutUs.css
+++ b/stylesheet/styleAboutUs.css
@@ -44,8 +44,9 @@
 }
 
 .about-us-description p {
-    color: var(--black);
+    color: var(--green);
     font-size: 0.8rem;
+    font-weight: 500;
     text-align: justify;
 }
 
