--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -236,15 +236,15 @@ header .menu-list  a:hover {
     max-width: fit-content;
     max-height: fit-content;
     /* border: solid var(--black) 5px; */
-    max-width: 50dvw;
-    min-height: 33.3dvh;
-    max-height: 33.3dvh;
+    max-width: 50vw;
+    min-height: 33.3vh;
+    max-height: 33.3vh;
 }
 
 .welcomeSection div {
     max-width: 50dvw;
-    min-height: 33.3dvh;
-    max-height: 33.3dvh;
+    min-height: 33.3vh;
+    max-height: 33.3vh;
     /* border: solid var(--orange) 5px; */
 }
 
