--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -242,7 +242,7 @@ header .menu-list  a:hover {
 }
 
 .welcomeSection div {
-    max-width: 50dvw;
+    max-width: 50vw;
     min-height: 33.3vh;
     max-height: 33.3vh;
     /* border: solid var(--orange) 5px; */
