--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -189,23 +189,23 @@ header .menu-list  a:hover {
 }
 
 .welcomeSection {
-    min-width: 100svw;
-    max-width: 100svw;
-    min-height: 100dvh;
-    max-height: 100dvh;
+    min-width: 100vw;
+    max-width: 100vw;
+    min-height: 100vh;
+    max-height: 100vh;
     display: grid;
     align-items: center;
     justify-content: center;
     grid-template-columns: repeat(2, 1fr);
     gap: 0;
-    /* margin-top: 5svh; */
-    /* margin-top: 10svh; */
+    /* margin-top: 5vh; */
+    /* margin-top: 10vh; */
     /* border: solid var(--black) 5px; */
 }
 
 .welcomeSection .title-div {
-    min-height: 33.3dvh;
-    min-width: 50dvw;
+    min-height: 33.3vh;
+    min-width: 50vw;
     display: grid;
     align-items: center;
     color: var(--white);
