--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -18,7 +18,7 @@
     justify-content: center;
     /* border: solid red 1px; */
     background-color: var(--green);
-    
+    position: static;
 }
 
 .boxItem {
