--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -81,7 +81,7 @@ header {
     color: var(--black);
     max-width: 80dvw;
     border-radius: 1rem;
-    padding: 0.5rem;
+    padding: 0.3rem;
     z-index: 20;
     max-height: min-content;
     display: none;
@@ -89,6 +89,7 @@ header {
     font-weight: bold;
     margin: 0 auto;
     text-align: center;
+    font-size: 0.7rem;
 }
 
 .show-alert {
@@ -114,6 +115,8 @@ header {
 .alert button a {
     color: var(--white);
     text-decoration: none;
+    font-size: 0.7rem;
+
 }
 
 .alert .cart-changed-message::first-letter {
