added functionality to the inputs on advancePageOne
Now the input only will be send if valid

--- a/stylesheet/cabaz.css
+++ b/stylesheet/cabaz.css
@@ -52,7 +52,7 @@
     justify-content: center;
 }
 
-.add-to-cart {
+.add-to-cart-button {
     background-color: var(--orange);
     color: var(--black);
     border-radius: 1rem;
