--- a/stylesheet/contacts.css
+++ b/stylesheet/contacts.css
@@ -21,18 +21,13 @@
     color: var(--white);
 }
 
-.contact, .location {
-    display: flex;
-    align-items: center;
-}
-
 .social-media {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     max-width: fit-content;
     gap: 5vw;
-    padding-left: 5vw;
+    padding: 3vw;
 }
 
 .social-media span {
@@ -41,7 +36,6 @@
 
 .media-and-contacts .footer-head {
     display: grid;
-    /* border: solid red 1px; */
     grid-template-columns: repeat(2, 1fr);
     gap: 2vh;
     justify-content: flex-start;
@@ -55,6 +49,7 @@
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 0.2rem;
+    text-align: center;
 }
 
 .media-and-contacts .footer-head p {
@@ -75,7 +70,6 @@
 }
 
 .call-cost {
-    /* font-size: 0.6rem; */
     grid-column-start: 2;
     color: var(--white);
 }
@@ -120,7 +114,6 @@
 
     .media-and-contacts {
         grid-template-columns: repeat(1, 1fr);
-        margin: 0.5rem auto 0 auto;
         align-items: center;
         justify-content: center;
     }
@@ -133,22 +126,28 @@
 @media screen and (min-width: 700px) {
 
      .media-and-contacts {
-        grid-template-columns: repeat(4, 1fr);
-       /*padding-bottom: 5vh;
-        align-items: center;
-        max-width: 100vw;
-        overflow-x: hidden; */
+        grid-template-columns: repeat(3, 1fr);
         margin-bottom: 0; 
-        padding-bottom: 10vh;
+        justify-content: space-between;
     } 
 
     .footer-head, .line-break {
-        grid-column: span 4;
+        grid-column: span 3;
+        padding: 0;
+        max-width: 100vw;
+    }
+
+    .footer-head {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .footer-head h4 {
+        grid-column-start: 2;
+        grid-column: span 3;
     }
 
     .footer-end {
         grid-column: span 3;
-        font-size: 1rem;
     }
 
     .footer-end a {
@@ -161,52 +160,29 @@
         text-decoration: underline;
         background-color: var(--orange);
         max-width: fit-content;
+        border-radius: 0.5rem 0;
     }
 
     .media-and-contacts i {
         color: var(--white);
         border: solid var(--white) 2px;
         background-color: transparent;
-        font-size: 1.2rem;
-
     }
 
     .media-and-contacts i:hover {
         border: solid var(--orange) 2px;
+        color: var(--orange);
     }
-
-    .info-tel span:nth-child(1),
-    .social-media a span {
-        font-size: 1rem;
-        min-width: fit-content;
+ 
+    .social-media {
+        grid-column: span 1;
+        padding: 1vw;
+        margin: 0 5vw;
+        
     }
 
     .info-tel span:nth-child(2) {
-        font-size: 0.8rem;
+        font-size: 0.7rem;
     }
-
-}
-
-@media screen and (min-width: 1410px) {
-/*     
-    .media-and-contacts {
-        grid-template-columns: repeat(4, 1fr);
-        padding-bottom: 5vh;
-        align-items: center;
-        max-width: 100vw;
-        overflow-x: hidden;
-        margin-bottom: 0;
-    }
-
-    .footer-head, .line-break {
-        grid-column: span 4;
-    }
-
-    .footer-end {
-        grid-column: span 3;
-        font-size: 1rem;
-    } */
-
-
 }
 
