--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -340,16 +340,18 @@ body::-webkit-scrollbar:vertical {
         align-items: center;
         justify-content: space-between;
         min-height: 12svh;
-        /* background-color: var(--white); */
+        background-color: var(--green);
     }
 
     .navbar {
         display: flex;
         gap: 5vw;
         align-items: center;
-        /* justify-content: flex-start; */
         justify-content: space-between;
+    }
 
+    .cart-div .fa-basket-shopping {
+        color: var(--white);
     }
 
     .logo-img {
@@ -358,59 +360,40 @@ body::-webkit-scrollbar:vertical {
     }
     
     .menu-list {
+        position: initial;
+        max-width: fit-content;
+        right: 0;
         display: flex;
         justify-content: space-between;
         min-width: 60svw;
         margin: 0 2vw;
+        padding: 0.3rem;
+        background-color: transparent;
     }
 
     header .menu-list a li {
         list-style: none;
-        color: var(--green);
+        color: var(--white);
         background-color: transparent;
         text-align: left;
         padding: 0.3rem;
         font-weight: 900; 
         cursor: pointer;
         min-width: 0svw;
-        /* border: 1px solid red; */
     }
- 
-    /* header .menu-list a li:hover {
-        color: var(--orange)
-    }
-
-    .searchBar-div {
-        background-color: var(--green-one);
-
-    }
-
-    .fa-bars-staggered,
-    .fa-x,
-    .openMenu,
-    .openMenu::before,
-    .openMenu::after {
-        display: none;
-    } */
 
     .welcomeSection {
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: repeat(7, 1fr);
         align-items:  flex-start;
         gap: 0;
-        /* justify-content: space-around; */
-        /* margin: 0 auto 10vh auto; */
         background-color: var(--green);
         overflow: hidden;
-        /* max-width: 100dvw; */
-        /* border: solid var(--orange) 5px; */
-        /* margin-top: 12dvh; */
         max-width: 100vw;
         min-height: 100vh;
     }
 
     .welcomeSection .title-div {
-        /* border: solid var(--orange) 2px; */
         min-height: min-content;
         min-width: 40dvw;
     }
@@ -418,7 +401,6 @@ body::-webkit-scrollbar:vertical {
     .welcomeSection div img{
         max-width: 16.6vw;
         min-height: 100vh;
-        /* border: solid var(--orange) 2px; */
         transition: all 2000ms ease-in-out;
     }
 
@@ -426,7 +408,6 @@ body::-webkit-scrollbar:vertical {
         max-width: 40dvw;
         z-index: 2;
         cursor: pointer;
-        /* border: solid var(--orange) 2px; */
     }
 
     .welcomeSection div:nth-child(1) {
