--- a/stylesheet/carrinho.css
+++ b/stylesheet/carrinho.css
@@ -50,7 +50,8 @@
     font-size: 0.8rem;
     max-width: 100%;
     text-align: left;
-
+    color: var(--black);
+    font-weight: bold;
 }
 
 .box-2 h3::first-letter {
@@ -58,7 +59,7 @@
 }
 
 .box-2 .box-2-child span {
-    color: var(--white);
+    color: var(--black);
     font-size: 0.8rem;
     font-weight: bold;
     background-color: var(--green);
@@ -82,14 +83,21 @@
     align-items: center;
 } 
 
+.priceToPay {
+    color: var(--black);
+    font-weight: bold;
+    background-color: var(--green-one);
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+}
+
 .fa-trash-can {
-    border: none;
-    outline: none;
     color: var(--orange);
     background-color: var(--black);
     border-radius: 15%;
     padding: 0.3rem;
     font-size: 0.7rem;
+    cursor: pointer;
 }
 
 .buttonsDelAndAdvance {
@@ -353,3 +361,38 @@ input[type="date"] {
     color: var(--orange);
 }
 
+@media screen and (min-width: 700px) {
+
+    .fa-trash-can:hover {
+        color: var(--black);
+        background-color: var(--orange);
+        position: relative;
+    }
+
+    .cartList {
+        grid-template-columns: repeat(3, 1fr);
+        /* border: solid greenyellow 5px; */
+        justify-content: center;
+        align-items: center;
+    }
+    /* .box-cart {
+        border: solid red 2px; */
+    
+    .box-cart {
+        min-width: fit-content;
+        max-width: min-content;
+        min-height: 30vh;
+        /* background-color: var(--green-one); */
+        border-radius: 1rem;
+        background-image: linear-gradient(45deg, var(--orange), var(--green));
+    
+    }   
+    .box-2 :nth-child(3) {
+        gap: 3vw;
+    }
+    .buttonsDelAndAdvance {
+        grid-column: span 3;
+        margin-top: 5vh;
+    }
+
+}
