--- a/stylesheet/styleAboutUs.css
+++ b/stylesheet/styleAboutUs.css
@@ -4,10 +4,27 @@
     box-sizing: border-box;
 }
 
+body {
+}
+
+.circle {
+    position: absolute;
+    top: 25vh;
+    right: -15vw;
+    min-width: 50vw;
+    min-height: 50vw;
+    border-radius: 50%;
+    background-image: linear-gradient(90deg, var(--green), var(--black));
+    z-index: -20;
+    opacity: 0.7;
+}
+
 .about-us {
     display: grid;
     margin: 6vh auto;
     justify-content: center;
+    position: relative;
+
 }
 
 .about-us-div {
