--- a/stylesheet/carrinho.css
+++ b/stylesheet/carrinho.css
@@ -100,6 +100,7 @@
     cursor: pointer;
 }
 
+/* ADVANCE PAGE STYLE */
 .buttonsDelAndAdvance {
     display: flex;
     justify-content: center;
@@ -194,6 +195,14 @@
     max-width: 100vw;
 }
 
+.client-data-sec form h4{
+    font-size: 0.8rem;
+    margin: 1rem auto;
+    font-weight: 600;
+    text-align: center;
+    max-width: 60vw;
+}
+
 .client-data-sec form section {
     border: solid var(--green) 3px;
     border-radius: 1rem 0;
@@ -235,12 +244,16 @@
     flex-direction: row-reverse;
     justify-content: center;
     gap: 1rem;
-    font-weight: bold;
     /* border: solid var(--orange) 3px; */
     border-radius: 1rem;
     background-color: var(--orange);
     color: var(--black);
-    padding: 1rem 1rem 1rem 0;
+    padding: 0.7rem 0.7rem 0.7rem 0;
+}
+
+.radio-buttons div label {
+    font-weight: bold;
+    font-size: 0.8rem;
 }
 
 .deliver-sec, 
