change login icon and start basket historic page

--- a/stylesheet/carrinho.css
+++ b/stylesheet/carrinho.css
@@ -1,3 +1,23 @@
+body {
+    background-image: url('/images/empty-cart-background-image.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+.backgroundColor {
+    /* background: linear-gradient(to right, var(--green), var(--black)); */
+    background: var(--black);
+    z-index: -2;
+    min-height: 100vh;
+    min-width: 100vw;
+    position: absolute;
+    top: -10rem;
+    bottom: 0;
+    opacity: 0.9;
+}
+
 .cartList {
     display: grid;
     gap: 1rem;
@@ -6,6 +26,7 @@
     padding: 1rem 0;
     min-height: 60vh;
     margin: 10vh 0;
+
 }
 
 .cartList img {
@@ -401,9 +422,8 @@ input[type="date"] {
         /* border: solid greenyellow 5px; */
         justify-content: center;
         align-items: center;
+        margin: 12vh auto;
     }
-    /* .box-cart {
-        border: solid red 2px; */
     
     .box-cart {
         min-width: fit-content;
@@ -444,5 +464,9 @@ input[type="date"] {
         text-align: center;
     }
 
-   
+    .empty-car-message {
+        text-align: center;
+        grid-column: span 3;
+        font-size: 1.2rem;
+    }
 }
