--- a/stylesheet/basketHistoric.css
+++ b/stylesheet/basketHistoric.css
@@ -1,3 +1,7 @@
+body {
+    position: relative;
+}
+
 .historic-images {
     min-height: 80vh;
     margin: 12vh auto 1vw auto;
@@ -5,27 +9,48 @@
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
     align-content: flex-start;
-    
 }
 
 .historic-images h4 {
     grid-column: span 3;
-    margin-bottom: 3rem;
+    margin: 5vw;
     text-align: center;
     color: var(--green);
 }
 
-.img-div {
-    margin-bottom: 1vh;
-}
-
-.img-div figcaption {
-    text-align: center;
-    background-color: var(--green);
-    color: var(--white);
-}
-
-.img-div img {
+.cb-image {
     object-fit: cover;
+    min-height: 20vh;
+    max-height: 20vh;
+    min-width: 33vw;
     max-width: 33vw;    
+}
+
+/* witout that the section doesn't still on top  */
+.zoom-image-section {
+    position: absolute;
+    top: 0;
+}
+
+.zoom-image {
+    object-fit: contain;
+    height: 100%;
+    width: 100%;
+    /* z-index: 5; */
+    /* transform-origin: center; */
+}
+
+.zoom-div {
+    display: none;
+    margin: auto;
+    min-height: fit-content;
+    max-width: 90vw;
+    /* background-color: aquamarine; */
+    position: sticky;
+    top: 25vh;
+    z-index: 2;
+}
+
+.test-show {
+    display: flex;
 }
